@@ -4,9 +4,9 @@ core = 7.x
 dependencies[] = libraries
 hidden = TRUE
 
-; Information added by drupal.org packaging script on 2012-07-29
-version = "7.x-2.0"
+; Information added by drupal.org packaging script on 2013-03-09
+version = "7.x-2.1"
 core = "7.x"
 project = "libraries"
-datestamp = "1343561873"
+datestamp = "1362848412"
 
